Change image sources to relative paths
Updated image source paths to relative URLs.

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
 
             <div class="project-card">
                 <div class="project-image-container">
-                    <img src="/Applications/XAMPP/xamppfiles/htdocs/portfolio_2/cpu.png" alt="Image for Project 2: [Project Title]">
+                    <img src="cpu.png" alt="Image for Project 2: [Project Title]">
                 </div>
                 <div class="project-details">
                     <h3 class="project-title">5-bit CPU Simulation</h3>
@@ -86,8 +86,7 @@
 
             <div class="project-card">
                 <div class="project-image-container">
-                    <!-- <img src="/Applications/XAMPP/xamppfiles/htdocs/portfolio_2/gds.png" alt="Image for Project 3: [Project Title]"> -->
-                    <img src="/Applications/XAMPP/xamppfiles/htdocs/portfolio_2/hitmap.png" alt="Image for Project 3: [Project Title]">
+                    <img src="hitmap.png" alt="Image for Project 3: [Project Title]">
                 </div>
                 <div class="project-details">
                     <h3 class="project-title">5‑bit ALU & FSM and Synthesis</h3>
