--- a/achievements.html
+++ b/achievements.html
@@ -24,7 +24,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Noman Amin</div>
+                <!-- <div class="logo">Noman Amin</div> -->
                 <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -39,6 +39,10 @@
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="cv.html" class="btn-cv">CV</a></li> 
                 </ul>
+
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
             </nav>
         </div>
     </header>
