Comment out logo in cv.html and add theme toggle button

--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Noman Amin</div>
+                <!-- <div class="logo">Noman Amin</div> -->
                 <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -36,6 +36,10 @@
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="cv.html" class="btn-cv active-link">CV</a></li>
                 </ul>
+
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
             </nav>
         </div>
     </header>
