Add theme toggle button to header

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="cv.html" class="btn-cv">CV</a></li> 
                 </ul>
+
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
             </nav>
         </div>
     </header>
