Update project images and toggle button in HTML

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Noman Amin</div>
+                <!-- <div class="logo">Noman Amin</div> -->
                 <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -34,6 +34,10 @@
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="cv.html" class="btn-cv">CV</a></li> 
                 </ul>
+
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
             </nav>
         </div>
     </header>
@@ -66,7 +70,7 @@
 
             <div class="project-card">
                 <div class="project-image-container">
-                    <img src="cpu.png" alt="Image for Project 2: [Project Title]">
+                    <img src="/Applications/XAMPP/xamppfiles/htdocs/portfolio_2/cpu.png" alt="Image for Project 2: [Project Title]">
                 </div>
                 <div class="project-details">
                     <h3 class="project-title">5-bit CPU Simulation</h3>
@@ -86,7 +90,8 @@
 
             <div class="project-card">
                 <div class="project-image-container">
-                    <img src="hitmap.png" alt="Image for Project 3: [Project Title]">
+                    <!-- <img src="/Applications/XAMPP/xamppfiles/htdocs/portfolio_2/gds.png" alt="Image for Project 3: [Project Title]"> -->
+                    <img src="/Applications/XAMPP/xamppfiles/htdocs/portfolio_2/hitmap.png" alt="Image for Project 3: [Project Title]">
                 </div>
                 <div class="project-details">
                     <h3 class="project-title">5‑bit ALU & FSM and Synthesis</h3>
