--- a/research.html
+++ b/research.html
@@ -24,10 +24,15 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">Noman Amin</div>
+                <!-- <div class="logo">Noman Amin</div> -->
                 <button class="hamburger" id="hamburger" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
+
+                
+
+
+                
 
                 <ul class="nav-links" id="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -39,6 +44,10 @@
                     <li><a href="experiences.html">Experiences</a></li>
                     <li><a href="cv.html" class="btn-cv">CV</a></li> 
                 </ul>
+
+                <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
+                    <i class="fa-solid fa-moon"></i>
+                </button>
             </nav>
         </div>
     </header>
