--- a/achievements.html
+++ b/achievements.html
@@ -37,7 +37,7 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="achievements.html" class="active-link">Achievements</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
-                    <li><a href="cv.html" class="btn-cv">CV</a></li> 
+                    <li><a href="cv.html">CV</a></li> 
                 </ul>
 
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
