--- a/experiences.html
+++ b/experiences.html
@@ -32,7 +32,7 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="achievements.html">Achievements</a></li>
                     <li><a href="experiences.html" class="active-link">Experiences</a></li>
-                    <li><a href="cv.html" class="btn-cv">CV</a></li> 
+                    <li><a href="cv.html">CV</a></li> 
                 </ul>
 
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
