--- a/cv.html
+++ b/cv.html
@@ -34,7 +34,7 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="achievements.html">Achievements</a></li>
                     <li><a href="experiences.html">Experiences</a></li>
-                    <li><a href="cv.html" class="btn-cv active-link">CV</a></li>
+                    <li><a href="cv.html" class="active-link">CV</a></li>
                 </ul>
 
                 <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
