Update publication title and conference name

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p class="pub-desc"></p>
 
             <!-- <span class="pub-meta" style="font-style: normal; color: var(--color-accent);">2025</span> -->
-            <a href="publications.html" class="pub-title" >Paper accepted for <b>IEEE ICCIT 2025</b> on Swin Transformer-Driven CU Partitioning for VVC.</a>
+            <a href="publications.html" class="pub-title" >Paper accepted for <b>IEEE ICCDMW 2025</b> on Swin Transformer-Driven CU Partitioning for VVC.</a>
             <p class="pub-desc"></p>
         </article>
 
