--- a/index.html
+++ b/index.html
@@ -88,12 +88,22 @@
                 </div>
                 <div class="focus-item">
                     <h3>02. Applied Deep Learning</h3>
-                    <p>Designing and training tailored models (DenseNet, ConvNeXt) for critical tasks like skin lesion detection and deepfake mitigation in competitive environments.</p>
+                    <p>Building end-to-end ML solutions across domains: medical imaging, generative media integrity, and efficient AI (model compression, acceleration, and neural codecs), covering data pipelines, representation learning, evaluation/validation, and deployment-focused optimization for real-world and competitive settings.</p>
                 </div>
                 <div class="focus-item">
                     <h3>03. Digital Systems Design</h3>
                     <p>Expertise in low-level hardware design (Verilog, OpenLane, Skywater 130 nm PDK).</p>
                 </div>
+                <div class="focus-item">
+                    <h3>04. Explainable AI for healthcare</h3>
+                    <p></p>
+                </div>
+                 <div class="focus-item">
+                    <h3>05. Visual forensics & deepfake detection</h3>
+                    <p></p>
+                </div>
+                
+                
             </div>
             <div style="text-align: center; margin-top: 40px;">
                 <a href="research.html" class="cta-link" style="font-size: 1rem;">Explore All Research Projects &rarr;</a>
