--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="focus-item">
                     <h3>02. Applied Deep Learning</h3>
-                    <p>Building end-to-end ML solutions across domains: medical imaging, generative media integrity, and efficient AI (model compression, acceleration, and neural codecs), covering data pipelines, representation learning, evaluation/validation, and deployment-focused optimization for real-world and competitive settings.</p>
+                    <p>Building end-to-end ML solutions in medical imaging, media integrity, and efficient AI, spanning data pipelines, representation learning, validation, and deployment-focused optimization.</p>
                 </div>
                 <div class="focus-item">
                     <h3>03. Digital Systems Design</h3>
